# agentwatch

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/agentwatch/: collector.py  cost.py  pricing.json  watch.py
tests/unit/: test_cost.py  test_smoke.py
